# livingworlds

./: .clippy.toml  .gitignore  CLAUDE.md  Cargo.toml  MODDING_IMPLEMENTATION.md  PERFORMANCE_METRICS.csv  README.md  STEAM_DEPLOYMENT.md  build.rs
.claude/: settings.local.json
.github/workflows/: rust.yml
assets/shaders/: noise_compute.wgsl
calendars/: eternal_spring.ron  french_revolutionary.ron  gregorian.ron  long_year.ron  lunar_364.ron  simple_360.ron
config/base/: audio.ron  balance.ron  colors.ron  generation.ron  simulation.ron
crates/lw_core/: Cargo.toml  README.md
crates/lw_core/src/: bounded_types.rs  constants.rs  error.rs  fixed.rs  lib.rs  random.rs  shared_types.rs  vector.rs
crates/lw_culture/: Cargo.toml  README.md
crates/lw_culture/src/: lib.rs
crates/lw_culture/src/components/: contact.rs  core.rs  mod.rs
crates/lw_culture/src/systems/: mod.rs
crates/lw_economics/: Cargo.toml  README.md
crates/lw_game/: Cargo.toml  README.md
crates/lw_game/src/: lib.rs  types.rs
crates/lw_game/src/components/: ai.rs  diplomacy.rs  individual.rs  military.rs  mod.rs  simulation.rs
crates/lw_game/src/components/common/: bounded_types.rs  mod.rs
crates/lw_game/src/components/culture/: contact.rs  core.rs
crates/lw_game/src/components/economics/: banking.rs  credit.rs  goods.rs  markets.rs  mod.rs  money.rs  production.rs  trade.rs  transactions.rs
crates/lw_game/src/components/geography/: climate.rs  mod.rs  province.rs  resources.rs  terrain.rs  water.rs
crates/lw_game/src/components/governance/: mod.rs  policy_incentives.rs  supranational.rs
crates/lw_game/src/components/infrastructure/: defense.rs  mod.rs  transport.rs  urban.rs  utilities.rs
crates/lw_game/src/systems/: collapse.rs  diplomacy.rs  economy.rs  geography_systems.rs  market_emergence.rs  mod.rs  technology.rs  time.rs
crates/lw_game/src/systems/core/: mod.rs
crates/lw_game/src/systems/culture/: mod.rs
crates/lw_game/src/systems/economics/: mod.rs
crates/lw_game/src/systems/geography/: mod.rs
crates/lw_game/src/systems/governance/: mod.rs
crates/lw_game/src/systems/individual/: mod.rs
crates/lw_game/src/systems/military/: mod.rs
crates/lw_game/src/systems/simulation_phases/: cultural_transmission.rs  demographic_transition.rs  diplomatic_evolution.rs  economic_emergence.rs  government_response.rs  individual_decisions.rs  military_actions.rs  synchronization.rs  world_changes.rs
crates/lw_governance/: Cargo.toml  README.md
crates/lw_military/: Cargo.toml  README.md
crates/lw_platform/: Cargo.toml  README.md
crates/lw_procedural/: Cargo.toml  README.md
crates/lw_procedural/src/: audio.rs  font.rs  lib.rs  names.rs  palette.rs  provinces.rs  terrain.rs
crates/lw_simulation/: Cargo.toml  README.md
crates/lw_simulation/src/: lib.rs
crates/lw_simulation/src/components/: individual.rs  mod.rs  simulation.rs
crates/lw_simulation/src/phases/: cultural_transmission.rs  demographic_transition.rs  diplomatic_evolution.rs  economic_emergence.rs  government_response.rs  individual_decisions.rs  military_actions.rs  mod.rs  world_changes.rs
crates/lw_simulation/src/systems/: event.rs  mod.rs
crates/lw_world/: Cargo.toml  README.md
data/content/: cinematic_presets.json
docs/: future-systems.md
error_logs/: error_worldgen_20250921_130156.json  error_worldgen_20250921_130358.json  error_worldgen_20250921_131253.json  error_worldgen_20250921_190508.json  error_worldgen_20250921_190544.json  error_worldgen_20250921_190716.json
mods/example_balance/: manifest.ron
saves/: save_20250912_094029_20250912_094032.lws
scripts/: auto_optimize.py
shaders/: erosion_compute.wgsl
src/: borders.rs  camera.rs  clouds.rs  colors.rs  components.rs  constants.rs  generation.rs  lib.rs  loading_screen.rs  main.rs  menus.rs  mesh.rs  minerals.rs  music.rs  name_generator.rs  overlay.rs  performance.rs  province_events.rs  resources.rs  save_load.rs  setup.rs  simulation.rs  states.rs  steam.rs  terrain.rs  ui.rs  version.rs  world_config.rs  world_generation_loading.rs
src/app/: builder.rs  initialization.rs  mod.rs  plugin_order.rs  plugins.rs
src/camera/: controller.rs  mod.rs  plugin.rs  setup.rs
src/cli/: args.rs  config.rs  mod.rs
src/config/: app.rs  diagnostics.rs  mod.rs  window.rs
src/content_creation/: mod.rs  plugin.rs  types.rs
src/diagnostics/: error_context.rs  fps.rs  logging.rs  mod.rs  plugin.rs  types.rs
src/generation/: agriculture.rs  climate.rs  clouds.rs  erosion.rs  mod.rs  provinces.rs  rivers.rs  tectonics.rs  types.rs  utils.rs
src/geometry/: hexagon.rs  mod.rs
src/infrastructure/: logging.rs  mod.rs  threads.rs
src/loading/: api.rs  mod.rs  plugin.rs
src/math/: angles.rs  distance.rs  hexagon.rs  interpolation.rs  mod.rs  perlin.rs  random.rs
src/menus/: interactions_example.rs  main_menu.rs  mod.rs  pause_menu.rs  plugin.rs  types.rs
src/modding/: examples.rs  handlers.rs  loader.rs  manager.rs  mod.rs  plugin.rs  types.rs  ui.rs
src/name_generator/: core.rs  generator.rs  geographic.rs  mod.rs  people.rs  places.rs  tests.rs  types.rs  utils.rs  world.rs
src/nations/: actions.rs  benches.rs  errors.rs  generation.rs  history.rs  integration_tests.rs  migration.rs  migration.rs.disabled  mod.rs  neighbors.rs  ownership.rs  plugin.rs  property_tests.rs  rendering.rs  territory_analysis.rs  types.rs
src/parallel/: builder.rs  chunk_size.rs  mod.rs  operations.rs  patterns.rs  plugin.rs  resources.rs  safety.rs  systems.rs
src/plugin_builder/: macros.rs  mod.rs  registration.rs  validation.rs
src/relationships/: administrative.rs  cultural.rs  debug.rs  diplomatic.rs  familial.rs  infrastructure.rs  legislative.rs  military.rs  mod.rs  plugin.rs  political.rs  population.rs  religious.rs
src/safety/: benchmarking.rs  detection.rs  metrics.rs  mod.rs  plugin.rs  validation.rs
src/save_load/: events.rs  mod.rs  plugin.rs  resources.rs  types.rs
src/settings/: components.rs  handlers.rs  mod.rs  navigation.rs  persistence.rs  resolution.rs  settings_ui.rs  types.rs
tests/: integration_test.rs
(+659 files in other folders)
