[package]
name = "living-worlds"
version = "0.2.0"
edition = "2021"

[features]
default = []
steam = ["bevy-steamworks"]  # Enable Steam integration
debug-states = []  # Enable debug state transition logging

[lib]
name = "living_worlds"
path = "src/lib.rs"

[[bin]]
name = "living-worlds"
path = "src/main.rs"

[dependencies]
# Full Bevy framework - complete game engine!
bevy = { version = "0.16.1", default-features = false, features = [
    "animation",          # Animation system
    "bevy_asset",         # Asset management
    "bevy_audio",         # Audio system
    "bevy_core_pipeline", # Core rendering pipeline
    "bevy_gilrs",         # Gamepad support
    "bevy_gizmos",        # Debug visualization
    "bevy_log",           # Logging system (info!, error!, warn!, etc.)
    "bevy_pbr",           # Physically based rendering
    "bevy_render",        # Rendering system
    "bevy_scene",         # Scene management
    "bevy_sprite",        # 2D sprites
    "bevy_state",         # State management (States, NextState, etc.)
    "bevy_text",          # Text rendering
    "default_font",       # Default font for UI text (required!)
    "bevy_ui",            # UI system
    "bevy_winit",         # Window management
    "multi_threaded",     # Parallel systems
    "png",                # PNG support
    "x11",                # Linux X11
    # "wayland",          # Linux Wayland (commented out - requires libwayland-dev)
    "tonemapping_luts",   # Better colors
    # "dynamic_linking",    # Faster development builds (disabled for release mode)
] }

# Keep our procedural approach - no GLTF or external assets needed!
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
async-channel = "2.3" # For async progress reporting in world generation
thiserror = "1.0"
anyhow = "1.0"

# UI text input for search bars and text fields
bevy_simple_text_input = "0.11"

# Save system features
zstd = "0.13"  # Compression for save files
ron = "0.8"    # Rusty Object Notation for serialization

# Steam integration
bevy-steamworks = { version = "0.13", optional = true }  # Steam SDK integration

# Settings persistence
bevy_pkv = "0.13"  # Cross-platform key-value storage for settings (0.13 for Bevy 0.16 compatibility)

# File watching for hot-reload
notify = "6.1"  # File system event notification for mod hot-reload
crossbeam-channel = "0.5"  # Thread-safe channels for Bevy

# Math and utilities
fixed = "1.24"
nalgebra = "0.32"
noise = "0.8"
log = "0.4"  # Structured logging for debug/info/warn/error
rand = { version = "0.8", features = ["small_rng"] }
rand_chacha = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.10"  # Parallel iteration for massive performance gains
voronator = "0.2"  # Real Voronoi tessellation for tectonic plates

# Audio
rodio = "0.17"
fundsp = "0.18"
hound = "3.5"  # For WAV file generation

# Compression
flate2 = "1.0"

# Platform
clap = { version = "4.4", features = ["derive"] }
pollster = "0.3"

# Steam support (optional - will add when needed)
# steamworks = "0.10"

[profile.release]
opt-level = 3       # Optimize for performance
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip symbols for cleaner binary
panic = "abort"     # No unwinding for better performance

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 2       # Optimize tests for speed

# ============================================================================
# LINTS - Code Quality and Bug Prevention
# ============================================================================
# Living Worlds uses comprehensive linting to catch bugs early and maintain
# code quality. These are warnings (not errors) so they don't block compilation
# but help identify issues during development.

[lints.rust]
# Warn on unused code
unused_imports = "warn"
unused_variables = "warn"
unused_mut = "warn"
dead_code = "warn"

# Future compatibility
rust_2018_idioms = "warn"
rust_2024_compatibility = "warn"

# Missing documentation (currently at 31% coverage)
# missing_docs = "warn"  # Uncomment when ready to document everything

[lints.clippy]
# Core correctness lints - these often indicate bugs
correctness = "warn"
suspicious = "warn"
complexity = "warn"
perf = "warn"
style = "warn"

# Enable pedantic lints but as warnings, not errors
pedantic = { level = "warn", priority = -1 }

# Specific lints we really care about
print_stdout = "warn"        # Catch those 221 println! statements
print_stderr = "warn"        # Also catch eprintln!
unwrap_used = "warn"         # Catch the 10 unwrap() calls that could panic
expect_used = "warn"         # Expect can also panic
panic = "warn"               # Direct panic! calls
todo = "warn"                # TODOs should be tracked properly
unimplemented = "warn"       # Unimplemented code shouldn't ship
dbg_macro = "warn"           # dbg! shouldn't be in production

# Performance issues
inefficient_to_string = "warn"
unnecessary_wraps = "warn"
needless_pass_by_value = "warn"
large_enum_variant = "warn"
large_types_passed_by_value = "warn"

# Maintainability
cognitive_complexity = "warn"
too_many_lines = "warn"

# Documentation
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"

# Common mistakes
manual_string_new = "warn"
redundant_clone = "warn"
redundant_closure_for_method_calls = "warn"
needless_borrow = "warn"

# But allow these patterns that are common in game dev
module_inception = "allow"         # Mod files with same name as parent
type_complexity = "allow"           # Bevy queries can be complex
too_many_arguments = "allow"       # Bevy systems need many parameters
single_match = "allow"              # Sometimes clearer than if let
match_wild_err_arm = "allow"        # Fine for prototype error handling
missing_docs_in_private_items = "allow"  # Too pedantic
return_self_not_must_use = "allow"  # Builder pattern
missing_const_for_fn = "allow"      # Not always applicable

# Test-specific allows (these only apply in #[cfg(test)] modules)
# Note: Use `#[allow(clippy::unwrap_used)]` in test modules

[dev-dependencies]
# Testing frameworks
proptest = "1.4"           # Property-based testing
rstest = "0.18"            # Parametrized tests
pretty_assertions = "1.4"   # Better assertion diffs
approx = "0.5"             # Float comparisons

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Test utilities
tempfile = "3.8"           # Temporary files for save/load tests
insta = "1.34"             # Snapshot testing for complex outputs

