[package]
name = "lw_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
thiserror.workspace = true
anyhow.workspace = true
fixed.workspace = true
rand.workspace = true
rand_chacha.workspace = true
