[package]
name = "lw_culture"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bevy = { version = "0.16", default-features = false }
lw_core = { path = "../lw_core" }
lw_economics = { path = "../lw_economics" }
serde = { version = "1.0", features = ["derive"] }
