[package]
name = "lw_game"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core dependencies
lw_core = { path = "../lw_core" }
lw_procedural = { path = "../lw_procedural" }

# Domain crates
lw_simulation = { path = "../lw_simulation" }
lw_world = { path = "../lw_world" }
lw_economics = { path = "../lw_economics" }
lw_military = { path = "../lw_military" }
lw_culture = { path = "../lw_culture" }
lw_governance = { path = "../lw_governance" }

# Bevy - our complete game engine
bevy.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true

# Utilities
thiserror.workspace = true
anyhow.workspace = true
rand.workspace = true
rand_chacha.workspace = true
